# haskell-snippets

./: README.md
sort-by-list-size/: sort-by-list-size.cabal
sort-by-list-size/src/: Main.hs
